--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <h2>En plein centre ville ou en pleine nature</h2>
 </div>
 
-<div class="search">
+<form class="search">
     <i id="search_icon" class="fa-sharp fa-solid fa-location-dot"></i>
     <input type="text" placeholder="Marseille, France, ...">
     <div>
         <p>Rechercher</p>
-        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-magnifying-glass"></i>
     </div>
-</div>
+</form>
 
 <div class="filters">
     <h1>Filtres</h1>
@@ -79,95 +79,119 @@
     <section class="accomodations" id="accomodations">
         <h2>Hébergements à Marseille</h2>
         <div class="accomodations_container">
-            <article>
-                <img src="assets/images/accomodations/photo1.jpg" alt="Auberge la Cannebière"/>
-                <div>
-                    <h2>Auberge la Cannebière</h2>
-                    <h3>Nuit à partir de 25€</h3>
-                    <div class="stars">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+            <a href="#">
+                <article>
+                    <img src="assets/images/accomodations/photo1.jpg" alt="Auberge la Cannebière"/>
+                    <div>
+                        <div class="title">
+                            <h2>Auberge la Cannebière</h2>
+                            <h3>Nuit à partir de 25€</h3>
+                        </div>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+                        </div>
                     </div>
-                </div>
-            </article>
+                </article>
+            </a>
 
-            <article>
-                <img src="assets/images/accomodations/photo2.jpg" alt="Hôtel du port"/>
-                <div>
-                    <h2>Hôtel du port</h2>
-                    <h3>Nuit à partir de 52€</h3>
-                    <div class="stars">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+            <a href="#">
+                <article>
+                    <img src="assets/images/accomodations/photo2.jpg" alt="Hôtel du port"/>
+                    <div>
+                        <div class="title">
+                            <h2>Hôtel du port</h2>
+                            <h3>Nuit à partir de 52€</h3>
+                        </div>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
                     </div>
-                </div>
-            </article>
+                </article>
+            </a>
 
-            <article>
-                <img src="assets/images/accomodations/photo3.jpg" alt="Hôtel Les mouettes"/>
-                <div>
-                    <h2>Hôtel Les mouettes</h2>
-                    <h3>Nuit à partir de 76€</h3>
-                    <div class="stars">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+            <a href="#">
+                <article>
+                    <img src="assets/images/accomodations/photo3.jpg" alt="Hôtel Les mouettes"/>
+                    <div>
+                        <div class="title">
+                            <h2>Hôtel Les mouettes</h2>
+                            <h3>Nuit à partir de 76€</h3>
+                        </div>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+                        </div>
                     </div>
-                </div>
-            </article>
+                </article>
+            </a>
 
-            <article>
-                <img src="assets/images/accomodations/photo4.jpg" alt="Hôtel de la mer"/>
-                <div>
-                    <h2>Hôtel de la mer</h2>
-                    <h3>Nuit à partir de 46€</h3>
-                    <div class="stars">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
-                        <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+            <a href="#">
+                <article>
+                    <img src="assets/images/accomodations/photo4.jpg" alt="Hôtel de la mer"/>
+                    <div>
+                        <div class="title">
+                            <h2>Hôtel de la mer</h2>
+                            <h3>Nuit à partir de 46€</h3>
+                        </div>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+                            <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+                        </div>
                     </div>
-                </div>
-            </article>
+                </article>
+            </a>
 
-            <article>
-                <img src="assets/images/accomodations/photo5.jpg" alt="Auberge Le Panier"/>
-                <div>
-                    <h2>Auberge Le Panier</h2>
-                    <h3>Nuit à partir de 23€</h3>
-                    <div class="stars">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+            <a href="#">
+                <article>
+                    <img src="assets/images/accomodations/photo5.jpg" alt="Auberge Le Panier"/>
+                    <div>
+                        <div class="title">
+                            <h2>Auberge Le Panier</h2>
+                            <h3>Nuit à partir de 23€</h3>
+                        </div>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+                        </div>
                     </div>
-                </div>
-            </article>
+                </article>
+            </a>
 
-            <article>
-                <img src="assets/images/accomodations/photo6.jpg" alt="Hôtel chez Amina"/>
-                <div>
-                    <h2>Hôtel chez Amina</h2>
-                    <h3>Nuit à partir de 96€</h3>
-                    <div class="stars">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
+            <a href="#">
+                <article>
+                    <img src="assets/images/accomodations/photo6.jpg" alt="Hôtel chez Amina"/>
+                    <div>
+                        <div class="title">
+                            <h2>Hôtel chez Amina</h2>
+                            <h3>Nuit à partir de 96€</h3>
+                        </div>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
                     </div>
-                </div>
-            </article>
+                </article>
+            </a>
         </div>
         <h2 class="clickable">Afficher plus</h2>
 
@@ -176,58 +200,67 @@
     <!-- POPULARS -->
 
     <section class="populars">
-        <h2>Les plus populaires</h2>
+        <div class="populars_title">
+            <h2>Les plus populaires</h2>
+            <i class="fa-solid fa-star"></i>
+        </div>
         <div class="populars_container">
-            <article>
-                <img src="assets/images/populars/photo7.jpg" alt="Hôtel Le soleil du matin"/>
-                <div>
-                    <div class="text">
-                        <h2>Hôtel Le soleil du matin</h2>
-                        <h3>Nuit à partir de 128€</h3>
+            <a href="#">
+                <article>
+                    <img src="assets/images/populars/photo7.jpg" alt="Hôtel Le soleil du matin"/>
+                    <div>
+                        <div class="title">
+                            <h2>Hôtel Le soleil du matin</h2>
+                            <h3>Nuit à partir de 128€</h3>
+                        </div>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
                     </div>
-                    <div class="stars">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                    </div>
-                </div>
-            </article>
+                </article>
+            </a>
 
-            <article>
-                <img src="assets/images/populars/photo8.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
-                <div>
-                    <div class="text">
-                        <h2>Au coeur de l'eau Chambres d'hôtes</h2>
-                        <h3>Nuit à partir de 71€</h3>
+            <a href="#">
+                <article>
+                    <img src="assets/images/populars/photo8.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
+                    <div>
+                        <div class="title">
+                            <h2>Au coeur de l'eau Chambres d'hôtes</h2>
+                            <h3>Nuit à partir de 71€</h3>
+                        </div>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+                        </div>
                     </div>
-                    <div class="stars">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
-                    </div>
-                </div>
-            </article>
+                </article>
+            </a>
 
-            <article>
-                <img src="assets/images/populars/photo9.jpg" alt="Hôtel Tout bleu et Blanc"/>
-                <div>
-                    <div class="text">
-                        <h2>Hôtel Tout bleu et Blanc</h2>
-                        <h3>Nuit à partir de 68€</h3>
+            <a href="#">
+                <article>
+                    <img src="assets/images/populars/photo9.jpg" alt="Hôtel Tout bleu et Blanc"/>
+                    <div>
+                        <div class="title">
+                            <h2>Hôtel Tout bleu et Blanc</h2>
+                            <h3>Nuit à partir de 68€</h3>
+                        </div>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
+                        </div>
                     </div>
-                    <div class="stars">
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star" style="color: #CBCBCB"></i> <!-- -->
-                    </div>
-                </div>
-            </article>
+                </article>
+            </a>
         </div>
     </section>
 
@@ -236,35 +269,47 @@
     <section class="activities" id="activities">
         <h2>Activités à Marseille</h2>
         <div class="activities_container">
-            <article class="large-activity">
-                <img src="assets/images/activities/photo10.jpg" alt="Vieux Port"/>
-                <h2>Vieux Port</h2>
-            </article>
+            <a href="#">
+                <article class="large-activity">
+                    <img src="assets/images/activities/photo10.jpg" alt="Vieux Port"/>
+                    <h2>Vieux Port</h2>
+                </article>
+            </a>
 
-            <article class="medium-activity">
-                <img src="assets/images/activities/photo11.jpg" alt="Fort de Pomègues"/>
-                <h2>Fort de Pomègues</h2>
-            </article>
+            <a href="#">
+                <article class="medium-activity">
+                    <img src="assets/images/activities/photo11.jpg" alt="Fort de Pomègues"/>
+                    <h2>Fort de Pomègues</h2>
+                </article>
+            </a>
 
-            <article class="small-activity">
-                <img src="assets/images/activities/photo12.jpg" alt="Îles du Frioul"/>
-                <h2>Îles du Frioul</h2>
-            </article>
+            <a href="#">
+                <article class="small-activity">
+                    <img src="assets/images/activities/photo12.jpg" alt="Îles du Frioul"/>
+                    <h2>Îles du Frioul</h2>
+                </article>
+            </a>
 
-            <article class="large-activity">
-                <img src="assets/images/activities/photo13.jpg" alt="Parc National des Calanques"/>
-                <h2>Parc National des Calanques</h2>
-            </article>
+            <a href="#">
+                <article class="large-activity">
+                    <img src="assets/images/activities/photo13.jpg" alt="Parc National des Calanques"/>
+                    <h2>Parc National des Calanques</h2>
+                </article>
+            </a>
 
-            <article class="medium-activity">
-                <img src="assets/images/activities/photo14.jpg" alt="Notre-Dame-de-la-Garde"/>
-                <h2>Notre-Dame-de-la-Garde</h2>
-            </article>
+            <a href="#">
+                <article class="medium-activity">
+                    <img src="assets/images/activities/photo14.jpg" alt="Notre-Dame-de-la-Garde"/>
+                    <h2>Notre-Dame-de-la-Garde</h2>
+                </article>
+            </a>
 
-            <article class="small-activity">
-                <img src="assets/images/activities/photo15.jpg" alt="Parc Longchamp"/>
-                <h2>Parc Longchamp</h2>
-            </article>
+            <a href="#">
+                <article class="small-activity">
+                    <img src="assets/images/activities/photo15.jpg" alt="Parc Longchamp"/>
+                    <h2>Parc Longchamp</h2>
+                </article>
+            </a>
         </div>
     </section>
 </main>
